// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load block from list files 1`] = `
Array [
  Object {
    "group": "general",
    "icon": "extension",
    "name": "TextBlock",
    "path": "text-block",
    "props": Object {
      "fontSize": Object {
        "default": 12,
        "editor": "number",
        "options": Object {},
        "required": false,
        "title": "Font Size",
        "type": "number",
      },
      "isDark": Object {
        "default": false,
        "editor": "checkbox",
        "options": Object {},
        "required": false,
        "title": "Is Dark",
        "type": "boolean",
      },
      "items": Object {
        "default": Array [],
        "editor": "textarea",
        "options": Object {},
        "required": false,
        "title": "Items",
        "type": "array",
      },
      "text": Object {
        "default": "default text",
        "editor": "text",
        "options": Object {},
        "required": false,
        "title": "Text",
        "type": "string",
      },
    },
    "title": "Text",
  },
  Object {
    "group": "general",
    "name": "FeatureBlock",
    "path": "feature-block",
    "props": Object {
      "color": Object {
        "default": "",
        "editor": "text",
        "required": true,
        "title": "Color",
        "type": "string",
      },
      "hasTitle": Object {
        "default": false,
        "editor": "checkbox",
        "required": false,
        "title": "Has Title",
        "type": "boolean",
      },
    },
    "title": "Feature Block",
  },
]
`;

exports[`load block from single file 1`] = `
Object {
  "group": "general",
  "icon": "extension",
  "name": "TextBlock",
  "path": "text-block",
  "props": Object {
    "fontSize": Object {
      "default": 12,
      "editor": "number",
      "options": Object {},
      "required": false,
      "title": "Font Size",
      "type": "number",
    },
    "isDark": Object {
      "default": false,
      "editor": "checkbox",
      "options": Object {},
      "required": false,
      "title": "Is Dark",
      "type": "boolean",
    },
    "items": Object {
      "default": Array [],
      "editor": "textarea",
      "options": Object {},
      "required": false,
      "title": "Items",
      "type": "array",
    },
    "text": Object {
      "default": "default text",
      "editor": "text",
      "options": Object {},
      "required": false,
      "title": "Text",
      "type": "string",
    },
  },
  "title": "Text",
}
`;

exports[`load block from single js file 1`] = `
Object {
  "group": "general",
  "name": "FeatureBlock",
  "path": "feature-block",
  "props": Object {
    "color": Object {
      "default": "",
      "editor": "text",
      "required": true,
      "title": "Color",
      "type": "string",
    },
    "hasTitle": Object {
      "default": false,
      "editor": "checkbox",
      "required": false,
      "title": "Has Title",
      "type": "boolean",
    },
  },
  "title": "Feature Block",
}
`;

exports[`load blocks from directory 1`] = `
Array [
  Object {
    "group": "general",
    "name": "FeatureBlock",
    "path": "feature-block",
    "props": Object {
      "color": Object {
        "default": "",
        "editor": "text",
        "required": true,
        "title": "Color",
        "type": "string",
      },
      "hasTitle": Object {
        "default": false,
        "editor": "checkbox",
        "required": false,
        "title": "Has Title",
        "type": "boolean",
      },
    },
    "title": "Feature Block",
  },
  Object {
    "group": "images",
    "icon": "image",
    "name": "ImageBlock",
    "path": "image-block",
    "props": Object {},
    "title": "Image",
  },
  Object {
    "group": "general",
    "icon": "image",
    "name": "TeaserBlock",
    "path": "teaser-block",
    "props": Object {
      "caption": Object {
        "default": "default text",
        "editor": "text",
        "options": Object {},
        "required": false,
        "title": "Caption",
        "type": "string",
      },
      "variant": Object {
        "default": "red",
        "editor": "radio-group",
        "options": Object {
          "variants": Array [
            "red",
            "blue",
            Object {
              "label": "Green variant",
              "value": "green",
            },
          ],
        },
        "required": false,
        "title": "Variants",
        "type": "string",
      },
    },
    "title": "Teaser block",
  },
  Object {
    "group": "general",
    "icon": "extension",
    "name": "TextBlock",
    "path": "text-block",
    "props": Object {
      "fontSize": Object {
        "default": 12,
        "editor": "number",
        "options": Object {},
        "required": false,
        "title": "Font Size",
        "type": "number",
      },
      "isDark": Object {
        "default": false,
        "editor": "checkbox",
        "options": Object {},
        "required": false,
        "title": "Is Dark",
        "type": "boolean",
      },
      "items": Object {
        "default": Array [],
        "editor": "textarea",
        "options": Object {},
        "required": false,
        "title": "Items",
        "type": "array",
      },
      "text": Object {
        "default": "default text",
        "editor": "text",
        "options": Object {},
        "required": false,
        "title": "Text",
        "type": "string",
      },
    },
    "title": "Text",
  },
]
`;
